@@ -220,6 +220,9 @@ Bug Fixes
 
 * SOLR-7285: ActionThrottle will not pause if getNanoTime first returns 0.
   (Mark Miller, Gregory Chanan)
+  
+* SOLR-7141: RecoveryStrategy: Raise time that we wait for any updates from the leader before
+  they saw the recovery state to have finished. (Mark Miller)
 
 Optimizations
 ----------------------
